--- a/src/css/forum-styles.css
+++ b/src/css/forum-styles.css
@@ -1275,4 +1275,9 @@ body {
     color: white;
     padding-top: 22px;
 }
+/*-------Top Slider-------*/
 
+.eh_top_slider_bigtitle {
+    font-size: 36px;
+    font-weight: 400;
+}
