--- a/src/css/forum-styles.css
+++ b/src/css/forum-styles.css
@@ -149,6 +149,19 @@ a:hover {
     border-bottom: 3px solid #0EB1F2;
     cursor: pointer;
 }
+.navbar .dropdown-menu .btn-link {
+    font-weight: 700;
+    color: #fff;
+    text-transform:uppercase;
+    font-size: 12px;
+    padding-left: 19px;
+    border-bottom: 3px solid transparent;
+}
+.navbar .dropdown-menu .btn-link:hover{
+    color: #0eb1f2;
+    border-bottom: 3px solid #0EB1F2;
+    text-decoration: none;
+}
 
 @media screen and (max-width: 768px) {
     .navbar-fixed-top {
@@ -201,6 +214,21 @@ a:hover {
         border-bottom: 3px solid #fff;
         cursor: pointer;
     }
+
+    .navbar .dropdown-menu .btn-link {
+        display: block;
+        padding-left: 24px;
+        font-weight: 700;
+        width: 100%;
+        max-width: 100%;
+        text-align: left;
+    }
+    .navbar .dropdown-menu .btn-link:hover{
+        color: #415562;
+        border-bottom: 3px solid #fff;
+        text-decoration: none;
+    }
+
 }
 
 @media screen and (max-width: 500px) {
@@ -1281,3 +1309,5 @@ body {
     font-size: 36px;
     font-weight: 400;
 }
+
+
