--- a/src/css/forum-styles.css
+++ b/src/css/forum-styles.css
@@ -150,6 +150,7 @@ a:hover {
     cursor: pointer;
 }
 .navbar .dropdown-menu .btn-link {
+    border-top: 3px solid transparent;
     font-weight: 700;
     color: #fff;
     text-transform:uppercase;
@@ -161,6 +162,12 @@ a:hover {
     color: #0eb1f2;
     border-bottom: 3px solid #0EB1F2;
     text-decoration: none;
+}
+.navbar .dropdown-menu .btn-link:focus{
+    color: #0eb1f2;
+    border-bottom: 3px solid #0EB1F2;
+    text-decoration: none;
+    outline:none;
 }
 
 @media screen and (max-width: 768px) {
@@ -184,6 +191,7 @@ a:hover {
     }
     .navbar-nav li a{
         line-height: 60px;
+
     }
     .navbar-nav > li > a,
     .navbar-nav .open .dropdown-menu > li > a{
@@ -290,8 +298,8 @@ a:hover {
     }
 }
 /*.navbar-nav > li > a{*/
-    /*color: #fff;*/
-    /*line-height: 50px;*/
+/*color: #fff;*/
+/*line-height: 50px;*/
 /*}*/
 .navbar-nav .open .dropdown-menu > li > a{
     line-height: 28px;
@@ -313,33 +321,33 @@ a:hover {
 }
 .navbar-fixed-top {
     /*background-color:rgba(0, 0, 0, 0.30);*/
- /*   background-color:#fff;
+/*   background-color:#fff;
 }
 
 .navbar-fixed-top.main-nav{
-    background-color:rgba(0, 0, 0, 0.75);
+   background-color:rgba(0, 0, 0, 0.75);
 }
 
 .navbar-nav li a {
-    text-transform:uppercase;
-    color:#fff;
-    line-height:28px;
+   text-transform:uppercase;
+   color:#fff;
+   line-height:28px;
 }
 
 .navbar-nav li a:hover {
-    color: #0EB1F2;
+   color: #0EB1F2;
 }
 
 .active a {
-    color: #0EB1F2;
+   color: #0EB1F2;
 }
 
 .navbar-brand {
-    height:60px;
+   height:60px;
 }
 .navbar-brand img {
-    height: 30px;
-    max-height: 100%;
+   height: 30px;
+   max-height: 100%;
 }
 /*.nav>li:hover>a,*/
 /*
