--- a/src/css/forum-styles.css
+++ b/src/css/forum-styles.css
@@ -1326,3 +1326,10 @@ body {
     position: relative;
 }
 
+.medal-opacity {
+    opacity: 0.5;
+}
+@media (min-width: 768px){.modal-dialog-medals{
+    width: 676px;
+    margin: 30px auto;
+}}
